docs/.vitepress/theme/style/global.css
.medium-zoom-overlay {
    background-color: var(--vp-c-bg) !important;
    z-index: 100;
}

.medium-zoom-overlay ~ img {
    z-index: 101;
}

.medium-zoom--opened .medium-zoom-overlay {
    opacity: 0.9 !important;
}

.MathJax {
    overflow: hidden;
}

.mermaid {
    display: flex;
    justify-content: center;
    align-items: center;
}

.DocSearch-Button-Key {
    color: var(--docsearch-muted-color) !important;
}

.DocSearch-Button:hover .DocSearch-Button-Keys {
    border: none !important;
}

.DocSearch-Button .DocSearch-Button-Keys {
    border: none !important;
    gap: 0 !important;
    padding: 0 !important;
}

kbd:not(.DocSearch-Button-Key) {
    background-color: #eee !important;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow:
        0 1px 1px rgba(0, 0, 0, 0.2),
        0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 5px;
    white-space: nowrap;
}

.menu .VPMenu {
    max-height: 64vh;
}

.hide-anchor .header-anchor {
    display: none;
}

.dark {
    .tip.custom-block > .danger.custom-block {
        background-color: #3e2129;
    }
}

.tip.custom-block > .danger.custom-block {
    background-color: #fde4e8;
}

